--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
         <title>Contact Me</title>
     </head>
     <body class="formbg">
-        <p style="width: 2%; border: 0px; text-decoration: none; background-color: rgba(240, 248, 255,0);"><a title="Go Back to Main Page" href="portfolio.html"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg></a></p>
+        <p style="width: 2%; border: 0px; text-decoration: none; background-color: rgba(240, 248, 255,0);"><a title="Go Back to Main Page" href="F1Showcase.html"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg></a></p>
         <form>
             <h3 class="formstyle" style="background-color:rgba(245, 222, 179, 0.7); font-size: xx-large; color: black; text-align: center; width: 100%; margin-top:0%;">Contact Me</h3>
             <label class="formstyle"for="fname">Name:</label><br>
@@ -20,6 +20,6 @@
             <input class="button" type="submit" ><br><br>
             <input class="button" type="reset" >
            </form>
-           <p style="background-color: rgba(127, 255, 212,0.5); margin-top: 8%; margin-left: 95%; border: 1px solid black; border-radius: 7px;"><a style=" font-size: large;" title="Click here to Go Back" href="portfolio.html">Go Back</a></p>
+           <p style="background-color: rgba(127, 255, 212,0.5); margin-top: 8%; margin-left: 95%; border: 1px solid black; border-radius: 7px;"><a style=" font-size: large;" title="Click here to Go Back" href="F1Showcase.html">Go Back</a></p>
     </body>
 </html>
