--- a/F1Showcase.html
+++ b/F1Showcase.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Personal Portfolio</title>
+        <title>Mercedes W15</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body class="portfoliobg">
